fix(AF-862): address review findings
- CROSS APPLY is a correlated lateral join, not a product; check APPLY
  before CROSS in cross_join, and judge comma-join correlation per join
- StatementWalker also descends into GROUP BY / ORDER BY / LIMIT / OFFSET
  so ORDER BY pg_sleep(10) cannot hide a banned function
- where_always_true also recognises numeric-literal comparisons (1 <> 0,
  2 > 1) and NOT FALSE; the stored predicate text is capped
- a config row with undecodable params keeps its severity and runs
  without params instead of failing every evaluation
- an explicitly empty required list is rejected at write time even when
  the param has defaults; value syntax now travels on SqlRuleParam
- codec catches JacksonException, not RuntimeException; view keeps null
  entries so the validator can reject them as blank
- ddl_statement reports CREATE TABLE / ALTER VIEW rather than class names
- docs: ddl_statement default wording, validator carve-out placement,
  six error keys, SqlStatementParser naming, #863 wiring note; engine
  fan-out pattern lists the two DbType relational allow-lists