@@ -1,5 +1,7 @@
 package com.bablsoft.accessflow.sqlreview.api;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -12,7 +14,8 @@ import java.util.Map;
  * @param params   rule-specific list parameters keyed by the rule's declared param key — the JSONB
  *                 shape is {@code {"names": ["pg_sleep"]}} for {@code disallowed_function} and
  *                 {@code {"globs": ["payroll.*"]}} for {@code protected_table}; never {@code null},
- *                 deep-copied, a {@code null} list reads as empty
+ *                 deep-copied, a {@code null} list reads as empty. {@code null} entries are kept
+ *                 so the write-time validator can reject them as blank instead of a copy failing
  */
 public record SqlReviewRuleConfigView(String ruleId, SqlReviewSeverity severity, Map<String, List<String>> params) {
     public SqlReviewRuleConfigView {
@@ -21,7 +24,9 @@ public record SqlReviewRuleConfigView(String ruleId, SqlReviewSeverity severity,
 
     private static Map<String, List<String>> deepCopy(Map<String, List<String>> source) {
         var copy = new HashMap<String, List<String>>(source.size());
-        source.forEach((key, values) -> copy.put(key, values == null ? List.of() : List.copyOf(values)));
+        source.forEach((key, values) -> copy.put(key, values == null
+                ? List.of()
+                : Collections.unmodifiableList(new ArrayList<>(values))));
         return Map.copyOf(copy);
     }
 }
